--- a/app/src/main/res/layout/activity_main_dat_coc.xml
+++ b/app/src/main/res/layout/activity_main_dat_coc.xml
@@ -1,9 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.windows10gamer.connsql.Khach_Hang.Main_Dat_Coc">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cam"
+        android:padding="10dp"
+        android:text="Đặt cọc"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        android:textSize="@dimen/bon" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvcoctoday"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableStart="@android:drawable/ic_menu_my_calendar"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="âdasd"
+            android:textSize="@dimen/muoi" />
+
+        <Button
+            android:id="@+id/btnthemcoc"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/bg125"
+            android:drawableStart="@android:drawable/ic_input_add"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="Thêm đặt cọc"
+            android:textAlignment="center"
+            android:textColor="@color/cam"
+            android:textSize="@dimen/btn" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:gravity="end"
+        android:paddingBottom="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="Lọc danh sách:"
+            android:textSize="@dimen/muoi" />
+
+        <TextView
+            android:id="@+id/tvtatca"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="Tất cả"
+            android:textColor="@color/RED"
+            android:textSize="@dimen/bon" />
+
+        <TextView
+            android:id="@+id/tvdatcoc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="Đặt cọc"
+            android:textColor="@color/holo_xanh"
+            android:textSize="@dimen/bon" />
+
+        <TextView
+            android:id="@+id/tvdahoancoc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="Đã hoàn cọc"
+            android:textColor="@color/xanh_la"
+            android:textSize="@dimen/bon" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/lvdatcoc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/list_border" />
+</LinearLayout>
