--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -119,6 +119,61 @@
             android:layout_height="match_parent">
 
             <Button
+                android:id="@+id/btndatcoc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg125"
+                android:drawableStart="@drawable/ic_datcoc"
+                android:paddingLeft="20dp"
+                android:text="ĐẶT CỌC"
+                android:textSize="11sp" />
+
+            <Button
+                android:id="@+id/btnnhanvien"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg125"
+                android:drawableStart="@drawable/ic_nhanvien"
+                android:paddingLeft="20dp"
+                android:text="NHÂN VIÊN"
+                android:textSize="11sp" />
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btnWeb"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg125"
+                android:drawableStart="@drawable/ic_browsing"
+                android:paddingLeft="20dp"
+                android:text="WEBSITE"
+                android:textSize="11sp" />
+
+            <Button
+                android:id="@+id/btnChi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/bg125"
+                android:drawableStart="@drawable/ic_chi"
+                android:paddingLeft="20dp"
+                android:text="Khoản chi"
+                android:textSize="11sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
                 android:id="@+id/btnBaohanh"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -166,33 +221,6 @@
                 android:paddingLeft="20dp"
                 android:text="Xuất - Nhập"
                 android:textSize="@dimen/muoi" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btnWeb"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/bg125"
-                android:drawableStart="@drawable/ic_browsing"
-                android:paddingLeft="20dp"
-                android:text="WEBSITE"
-                android:textSize="11sp" />
-
-            <Button
-                android:id="@+id/btnChi"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/bg125"
-                android:drawableStart="@drawable/ic_chi"
-                android:paddingLeft="20dp"
-                android:text="Khoản chi"
-                android:textSize="11sp" />
         </TableRow>
 
     </TableLayout>
