--- a/app/src/main/res/layout/activity_main_info_bhht.xml
+++ b/app/src/main/res/layout/activity_main_info_bhht.xml
@@ -96,7 +96,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Nhân viên Bán:"
+                    android:paddingBottom="3dp"
+                    android:text="Nhân viên Bảo hành:"
                     android:textSize="@dimen/muoi" />
 
                 <LinearLayout
@@ -226,11 +227,7 @@
                     android:textColor="@color/cam"
                     android:textSize="@dimen/hai" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Nhân viên Bảo hành:"
-                    android:textSize="@dimen/muoi" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -291,7 +288,13 @@
                             android:textSize="@dimen/muoi" />
                     </LinearLayout>
                 </LinearLayout>
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="3dp"
+                    android:paddingTop="3dp"
+                    android:text="Nhân viên Bán:"
+                    android:textSize="@dimen/muoi" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
