--- a/app/src/main/res/layout/dialog_datcoc.xml
+++ b/app/src/main/res/layout/dialog_datcoc.xml
@@ -267,6 +267,31 @@
                 android:textAlignment="textEnd"
                 android:textSize="@dimen/bon" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="Ghi chú:"
+                android:textSize="@dimen/muoi" />
+
+            <EditText
+                android:id="@+id/edcocghichu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:background="@drawable/bg_edittext"
+                android:inputType="text"
+                android:textAlignment="textEnd"
+                android:textSize="@dimen/bon" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -369,6 +394,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp"
             android:text="Nhân viên hoàn cọc:"
             android:textSize="@dimen/muoi" />
 
