--- a/app/src/main/res/layout/spinner_nv.xml
+++ b/app/src/main/res/layout/spinner_nv.xml
@@ -12,9 +12,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="374dp"
