--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="bon">14sp</dimen>
     <dimen name="sau">16sp</dimen>
     <dimen name="tam">18sp</dimen>
-    <dimen name="tie">20sp</dimen>
+    <dimen name="tie">18sp</dimen>
+    <dimen name="muoi_nho">10sp</dimen>
 
 </resources>
