--- a/app/src/main/res/layout/activity_main_duyetnhap.xml
+++ b/app/src/main/res/layout/activity_main_duyetnhap.xml
@@ -310,6 +310,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:orientation="horizontal"
+                android:paddingBottom="3dp"
                 android:weightSum="10">
 
 
@@ -349,15 +350,6 @@
 
                 </LinearLayout>
             </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/cam" />
 
 
             <LinearLayout
