--- a/app/src/main/res/layout/adapter_quatang.xml
+++ b/app/src/main/res/layout/adapter_quatang.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:weightSum="10">
 
@@ -13,9 +14,10 @@
 
         android:layout_weight="9"
         android:drawableLeft="@android:drawable/btn_star_big_on"
-        android:drawableStart="@mipmap/gift_icon"
+        android:drawablePadding="10dp"
+        android:drawableStart="@drawable/ic_gift2"
         android:gravity="center_vertical"
-        android:padding="5dp"
+        android:padding="10dp"
         android:text="TextView"
         android:textSize="@dimen/hai"
         android:textStyle="bold" />
