--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_error"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom|center"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp"
-    android:layout_marginTop="50dp"
-    android:background="@color/toast"
-    android:gravity="center"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
-    android:weightSum="1">
+    android:layout_height="match_parent"
+    android:layout_centerVertical="false"
+    android:layout_gravity="center"
+    android:gravity="center">
 
-    <TextView
-        android:id="@+id/toast_error"
+    <LinearLayout
+        android:id="@+id/layout_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:padding="15dp"
-        android:textColor="#fff"
-        android:textSize="@dimen/hai"
-        android:textStyle="bold" />
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:background="@drawable/bg_toast"
+        android:gravity="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/toast_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:drawableStart="@drawable/ic_customer_service"
+            android:gravity="center"
+            android:padding="5dp"
+            android:textColor="@color/aaaa"
+            android:textSize="@dimen/sau"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
