--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -33,7 +33,7 @@ tools:context="com.example.windows10gamer.connsql.Main">
         tools:context="com.example.windows10gamer.connsql.Wellcome">
 
         <ImageView
-            android:id="@+id/ivAvatar"
+            android:id="@+id/anhdaidien"
             android:layout_width="80dp"
             android:layout_height="83dp"
             android:layout_marginBottom="8dp"
@@ -60,7 +60,7 @@ tools:context="com.example.windows10gamer.connsql.Main">
             android:textSize="@dimen/hai"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
+            app:layout_constraintTop_toBottomOf="@+id/anhdaidien"
             tools:ignore="MissingConstraints" />
     </android.support.constraint.ConstraintLayout>
 
